<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="NewGroupViewModel"
            type="org.sopt.pingle.presentation.ui.newgroup.NewGroupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/spacing16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/spacing16" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/spacing16" />

        <TextView
            android:id="@+id/tv_new_group_input_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/new_group_input_title"
            android:textAppearance="@style/TextAppearance.Pingle.Title.Semi.24"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/gl_top" />

        <org.sopt.pingle.util.component.PingleEditText
            android:id="@+id/et_new_group_input_team_name"
            etText="@={NewGroupViewModel.newGroupTeamName}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toStartOf="@id/gl_end"
            app:layout_constraintStart_toEndOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/tv_new_group_input_title"
            app:pingleEditTextCheckVisibility="visible"
            app:pingleEditTextHint="@string/new_group_input_name_hint"
            app:pingleEditTextTitle="@string/new_group_input_name_title" />

        <org.sopt.pingle.util.component.PingleEditText
            android:id="@+id/include_new_group_input_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@id/gl_end"
            app:layout_constraintStart_toEndOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/et_new_group_input_team_name"
            app:pingleEditTextHint="@string/new_group_input_email_hint"
            app:pingleEditTextTitle="@string/new_group_input_email_title" />

        <TextView
            android:id="@+id/tv_new_group_input_guide"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/new_group_input_guide"
            android:textAppearance="@style/TextAppearance.Pingle.Cap.Med.10"
            android:textColor="@color/g_04"
            app:drawableStartCompat="@drawable/ic_all_info_14"
            app:layout_constraintStart_toEndOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/include_new_group_input_email" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>