<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="org.sopt.pingle.presentation.ui.plan.PlanViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_plan_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing8"
            android:text="@string/plan_open_chatting_title"
            android:textAppearance="@style/TextAppearance.Pingle.Title.Semi.24"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <org.sopt.pingle.util.component.PingleEditText
            android:id="@+id/et_plan_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing25"
            app:etText="@={viewModel.planOpenChattingLink}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_plan_title"
            app:pingleEditTextHint="@string/plan_open_chatting_hint"
            app:pingleEditTextTitle="@string/plan_open_chatting_text_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>