<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.joingroup.JoinGroupSuccessActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/spacing24" />

        <TextView
            android:id="@+id/tv_join_group_success_title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="108dp"
            android:text="@string/join_group_success_title"
            android:textAppearance="@style/TextAppearance.Pingle.Title.Semi.32"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/gl_start"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_join_group_success_description_group_name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacing16"
            android:textAppearance="@style/TextAppearance.Pingle.Body.Med.16"
            android:textColor="@color/g_03"
            app:layout_constraintStart_toEndOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/tv_join_group_success_title"
            tools:text="@string/join_group_success_description_group_name" />


        <TextView
            android:id="@+id/tv_join_group_success_description"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/spacing4"
            android:text="@string/join_group_success_description"
            android:textAppearance="@style/TextAppearance.Pingle.Body.Med.16"
            android:textColor="@color/g_03"
            app:layout_constraintStart_toEndOf="@id/gl_start"
            app:layout_constraintTop_toBottomOf="@id/tv_join_group_success_description_group_name" />

        <ImageView
            android:id="@+id/iv_join_group_success"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/img_join_group_success_graphic"
            app:layout_constraintBottom_toTopOf="@id/btn_join_group_success"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_join_group_success_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_join_group_success"
            style="@style/Theme.Pingle.Button.L"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing16"
            android:layout_marginBottom="@dimen/spacing25"
            android:backgroundTint="@color/g_01"
            android:text="@string/join_group_success_btn"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_join_group_success" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>