<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.plan.planlocation.PlanLocationFragment">

        <TextView
            android:id="@+id/tv_plan_location_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing8"
            android:text="@string/plan_location_title"
            android:textAppearance="@style/TextAppearance.Pingle.Title.Semi.24"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <org.sopt.pingle.util.component.PingleSearch
            android:id="@+id/pingle_search_plan_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:pingleSearchHint="@string/plan_location_hint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_plan_location_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_plan_location_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="21dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pingle_search_plan_location"
            tools:listitem="@layout/item_plan_location" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_plan_location_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pingle_search_plan_location">

            <TextView
                android:id="@+id/tv_plan_location_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plan_location_empty"
                android:textAppearance="@style/TextAppearance.Pingle.Sub.Semi.18"
                android:textColor="@color/g_06"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_plan_location_empty_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing4"
                android:text="@string/plan_location_empty_info"
                android:textAppearance="@style/TextAppearance.Pingle.Cap.Med.12"
                android:textColor="@color/g_08"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_plan_location_empty" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
